# pdf-master

./: .gitignore  CLAUDE.md  FUNCTIONAL_IMPLEMENTATION_AUDIT_2026-05-13.md  FUNCTIONAL_IMPLEMENTATION_AUDIT_2026-05-19.md  FUNCTIONAL_IMPLEMENTATION_AUDIT_2026-05-22.md  GEMINI.md  IMPLEMENTATION_REVIEW_2026-03-18.md  IMPLEMENTATION_REVIEW_2026-04-21.md  PDF_EDITOR_AUDIT.md  PROJECT_ANALYSIS_AND_FEATURE_ROADMAP.md  PROJECT_AUDIT.md  README.md  README_EN.md  WALKTHROUGH_I18N.md  main.py  pdf-master-v2.py  pdf_master.spec  pyproject.toml  pyrightconfig.json  pytest.ini  requirements-dev.txt
scripts/: codegraph.ps1  codegraph_repair.ps1  optimize_icon.py  package_smoke.ps1  run_code_split.py  split_mixin_package.py
tests/: _deps.py  conftest.py  test_advanced_new_modes_ui_flow.py  test_ai_key_storage_path.py  test_ai_ops_cancel_and_encrypted.py  test_ai_service_cache.py  test_ai_service_gemini_smoke.py  test_ai_thumbnail_grid_flow.py  test_ai_worker_ui_flow.py  test_audit_2026_07_22_followup.py  test_audit_followup_stability.py  test_close_shutdown_flow.py  test_compare_scanned_pdf_limitation.py  test_convert_format_options.py  test_encoding_audit.py  test_freehand_signature_ui_flow.py  test_i18n.py  test_i18n_catalogs.py  test_i18n_runtime_widgets.py  test_i18n_ui_hardcoded_smoke.py  test_i18n_worker_hardcoded_smoke.py  test_icon_assets.py  test_link_index_policy.py  test_main_smoke.py  test_output_dialog_state.py  test_page_index_policy.py  test_preview_doc_reuse.py  test_preview_print.py  test_preview_search.py  test_rotate_selection_ui_flow.py  test_settings.py  (+38 more)
(+188 files in other folders)
